force-app/main/default/objects/Knowledge__kav/fields/Automation__c.field-meta.xml
<CustomField>
    <fullName>Automation__c</fullName>
    <label>Automation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>