force-app/main/default/objects/Knowledge__kav/fields/Intended_Audience__c.field-meta.xml
<CustomField>
    <fullName>Intended_Audience__c</fullName>
    <inlineHelpText>Targeted audience by department name.</inlineHelpText>
    <label>Intended Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>All Departments</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>Launch</fullName>
            </value>
            <value>
                <fullName>QC</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>