force-app/main/default/objects/Knowledge__kav/fields/Navigation__c.field-meta.xml
<CustomField>
    <fullName>Navigation__c</fullName>
    <label>Navigation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>