force-app/main/default/objects/Knowledge__kav/fields/Needed_Information__c.field-meta.xml
<CustomField>
    <fullName>Needed_Information__c</fullName>
    <label>Needed Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>