force-app/main/default/objects/Knowledge__kav/fields/Steps_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_Complete__c</fullName>
    <label>Steps to Complete</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>