force-app/main/default/objects/Knowledge__kav/fields/Training_Video__c.field-meta.xml
<CustomField>
    <fullName>Training_Video__c</fullName>
    <label>Training Video</label>
    <type>Url</type>
</CustomField>