force-app/main/default/objects/Knowledge__kav/fields/Types__c.field-meta.xml
<CustomField>
    <fullName>Types__c</fullName>
    <label>Types</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>