force-app/main/default/objects/Knowledge__kav/recordTypes/Process_Steps.recordType-meta.xml
<RecordType>
    <fullName>Process_Steps</fullName>
    <active>true</active>
    <description>This is used for detailing out processes</description>
    <label>Process Steps</label>
</RecordType>