force-app/main/default/objects/Knowledge__kav/recordTypes/SF_Training.recordType-meta.xml
<RecordType>
    <fullName>SF_Training</fullName>
    <active>true</active>
    <label>SF Training</label>
</RecordType>