force-app/main/default/objects/Knowledge__kav/listViews/Enrollment_Articles.listView-meta.xml
<ListView>
    <fullName>Enrollment_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TITLE</field>
        <operation>contains</operation>
        <value>Queue,monitoring,monitor,roster,ad source,source,elead,vinsolution,number</value>
    </filters>
    <label>Enrollment Articles</label>
</ListView>