force-app/main/default/objects/Knowledge__kav/listViews/SFDC_Documentation.listView-meta.xml
<ListView>
    <fullName>SFDC_Documentation</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TITLE</field>
        <operation>contains</operation>
        <value>SFDC Documentation</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>SFDC Documentation</label>
</ListView>